antes de prueba de endpoint e input